# hs-bindgen-tutorial-nix

./: .gitignore  flake.nix  readme.md  todo.md  update
hs-pcap/: readme.md
hs-pcap/hs-pcap-client/: flake.nix  generate-bindings  generate-include-graph  hs-pcap-client.cabal  pcap.mmd  render-include-graph
hs-pcap/hs-pcap-client/app/: Pcap.hs
hs-pcap/hs-pcap-th/: flake.nix  hs-pcap-th.cabal
hs-pcap/hs-pcap-th/app/: Pcap.hs
hs-wlroots/: Pixman.yaml  Wayland.yaml  WaylandServerCore.yaml  WaylandUtil.yaml  WlrTypesOutput.yaml  flake.nix  generate-bindings  generate-include-graph  generate-include-graphs  hs-wlroots.cabal  include-graph-all.mmd  include-graph-backend-simple.mmd  include-graph-backend.mmd  include-graph-example.mmd  include-graph-manually-simplified.mermaid  include-graph-minimal.mmd  include-graph-no-stdlibs-simple.mmd  include-graph-no-stdlibs.mmd  include-graph-reduced-edited.mmd  readme.md  render-include-graphs
hs-wlroots/app/: Wlroots.hs
pcap-client/: flake.nix  generate-bindings  generate-include-graph  hs-pcap.cabal  pcap-client.cabal  pcap.mmd
pcap-client/app/: Pcap.hs
pcap-th/: flake.nix  hs-pcap.cabal  pcap-th.cabal
pcap-th/app/: Pcap.hs
