cabal-version:      3.4
name:               hs-wlroots
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well Typed
maintainer:         info@well-typed.com
category:           Development
build-type:         Simple
synopsis:           Test `hs-bindgen` on the `wlroots` library

common common
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16 && < 4.22
  default-language:
      GHC2021

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    , Generated.Pixman
    , Generated.Pixman.FunPtr
    , Generated.Pixman.Safe
    , Generated.Pixman.Unsafe
    , Generated.Wayland.Util
    , Generated.Wayland.Util.FunPtr
    , Generated.Wayland.Util.Safe
    , Generated.Wayland.Util.Unsafe
    , Generated.Wayland.Server.Core
    , Generated.Wayland.Server.Core.FunPtr
    , Generated.Wayland.Server.Core.Safe
    , Generated.Wayland.Server.Core.Unsafe
    , Generated.Wlroots.Backend
    , Generated.Wlroots.Backend.FunPtr
    , Generated.Wlroots.Backend.Safe
    , Generated.Wlroots.Backend.Unsafe
  autogen-modules:
  ghc-options: -optc-DWLR_USE_UNSTABLE
  extra-libraries:
    , wlroots-0.19
    , wayland-server
  build-depends:
    , c-expr-runtime
    , ghc-prim
    , hs-bindgen-runtime
    , primitive

executable hs-wlroots-bin
  import:          common
  main-is:         Wlroots.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  build-depends:
    , base >=4.7 && <5
    , hs-bindgen-runtime
    , hs-wlroots
