cabal-version:      3.4
name:               pcap-client
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well Typed
maintainer:         info@well-typed.com
category:           Development
build-type:         Simple
synopsis:           Test `hs-bindgen` client on the `pcap` library

common common
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16 && < 4.22
  default-language:
      GHC2021

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    , Generated.Pcap
    , Generated.Pcap.FunPtr
    , Generated.Pcap.Safe
    , Generated.Pcap.Unsafe
  autogen-modules:
  ghc-options:
  extra-libraries: pcap
  build-depends:
    , c-expr-runtime
    -- TODO: https://github.com/well-typed/hs-bindgen/issues/1455.
    , ghc-prim
    , hs-bindgen-runtime
    -- TODO: https://github.com/well-typed/hs-bindgen/issues/1455.
    , primitive

executable pcap-client-bin
  import:          common
  main-is:         Pcap.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  extra-libraries: pcap
  build-depends:
    , base >=4.7 && <5
    , pcap-client
