cabal-version:      3.4
name:               pcap-th
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Well Typed
maintainer:         info@well-typed.com
category:           Development
build-type:         Simple
synopsis:           Test `hs-bindgen` Template-Haskell interface on the `pcap` library

common common
  ghc-options:
      -Wall
  build-depends:
      base >= 4.16 && < 4.22
  default-language:
      GHC2021

executable pcap-th-bin
  import:          common
  main-is:         Pcap.hs
  hs-source-dirs:  app
  other-modules:
  autogen-modules:
  ghc-options:
  extra-libraries: pcap
  build-depends:
    , base >=4.7 && <5
    , c-expr-runtime
    , hs-bindgen
    , ghc-prim
    , hs-bindgen-runtime
    , optics
    , primitive
